# webbsite

./: .env.example  .gitignore  ARCHIVE_INVENTORY.md  ARCHIVE_USAGE_GUIDE.md  CLAUDE.md  COPYRIGHT  Copyright and disclaimer.md  DBPUB_FIXES_SUMMARY.md  FINAL_ARCHIVE_STATUS.md  FINAL_ARCHIVE_STATUS_Oct31.md  MIGRATION_VERIFICATION_REPORT.md  PROGRESS.md  README-deployment.md  README.md  README.txt  TEST_PASS_REPORT.md  TEST_PASS_REPORT_Updated.md  TEST_RESULTS_Oct31.md  analyze_gaps.sh  app.py  archive_comprehensive.sh  archive_crawl.sh  archive_crawl_enhanced.sh  archive_inventory.json  archive_routes.sh  archive_routes_extended.sh  extract_parameters.py  fetch_comprehensive.py  fetch_smart.py  generate_inventory.py  gunicorn.conf.py  parse_route_forms.py  pyproject.toml  render.yaml  route_forms.json  test_all_routes.sh  update_test_config.py
.serena/: project.yml
CCASS schema/: ccassStructure-2025-10-11- 600.sql  issues in CCASS holdings.sql
Enigma schema/: enigmaStructure-2025-10-11- 000.sql  enigmaTriggers-2025-10-11- 000.sql
Mailvote schema and login system/: mailvoteStructure-2025-04-16-1215.sql
Setting up the Webb-site database/: Setting up the Webb-site Database.md  master private schema structure 250423.sql
VB.net files/: .vsconfig  Buybacks.vb  CCASS.vb  CR.vb  GetFinancialReports.vb  GetJudgments.vb  HKEXdata.vb  HKMA.vb  HKflights.vb  HKlawSoc.vb  ImmD.vb  JSONkit.vb  LandReg.vb  Listing.vb  Quarantine.vb  Quotes.vb  SDI.vb  SFC.vb  ScraperKit.vb  Suggested run times.md  Transport.vb  Treasury.vb  UKCH.vb  housing.vb  persons.vb
deploy/: Caddyfile  (+1 more)
(+2993 files in other folders)
