[project]
name = "webbsite"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "flask",
    "psycopg2-binary",
    "sqlalchemy",
    "gunicorn",
    "python-dotenv",
    "colorama>=0.4.6",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
    "ruff>=0.14.1",
]
test = [
    "beautifulsoup4>=4.14.2",
    "colorama>=0.4.6",
    "lxml>=6.0.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
